rectified layout issue in login.pug

--- a/static/style.css
+++ b/static/style.css
@@ -18,7 +18,7 @@ a#header {
 }
 a {
     color: black;
-    text-decoration: none;
+    text-decoration: none!important;
 }
 #login-link {
     font-size: 18px;
